# fitpulse-bot

./: .gitignore  alembic.ini  main.py  migrate.sh  pyproject.toml
handlers/: common.py  food.py
keyboards/: common.py  food.py
middleware/: logging.py
src/handlers/: admin.py  common.py  food.py  trainings.py
src/keyboards/: admin.py  common.py  food.py
src/storage/: database.py  food.py  models.py  user.py
src/utils/: plots.py
storage/: database.py  food.py  models.py  user.py
