[tool.poetry]
name = "fitpulse-bot"
version = "0.1.0"
description = "a simple telegram bot for counting calories and track trainings"
authors = ["Lvov Alexandr <strangeisdoctor@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.20.0.post0"
asyncio = "^3.4.3"
logging = "^0.4.9.6"
python-dotenv = "^1.1.0"
alembic = "^1.16.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.41"}
asyncpg = "^0.30.0"
datetime = "^5.5"
matplotlib = "<3.8"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
